
* SOLR-17050: Use compact JSON for Learning to Rank (LTR) feature and model storage. (Florin Babes, Christine Poerschke, Alessandro Benedetti)

* SOLR-17094: Close objects contained inside an ObjectCache.  (Vincent Primault)

* SOLR-16577: Ensure core load failures are always logged. (Haythem Khiri, David Smiley)

Optimizations
---------------------
* SOLR-17084: LBSolrClient (used by CloudSolrClient) now returns the count of core tracked as not live AKA zombies
  instead of the full list of cores.  This list is potentially as long as the number of cores.  When there are many
  cores, this leads to high CPU and memory usage. (Gilles Bellaton, David Smiley)

Bug Fixes
---------------------
* SOLR-6853: Allow '/' characters in the text managed by Managed Resources API. (Nikita Rusetskii via Eric Pugh)

* SOLR-17039: Entropy calculation in bin/solr script fails in Docker due to missing 'bc' cmd (janhoy)

* SOLR-17045: DenseVectorField w/ vectorDimension > 1024 now work automatically with _default configset, due to
  implicit use of SchemaCodecFactory.  (hossman)

* SOLR-10653: When there's a UUIDField in the schema and atomic update touches another field
  the error occurs when leader updates replica (Mikhail Khludnev)

* SOLR-17093: Collection restore API command now returns "requestid" when executed asynchronously like other APIs
  (Tomás Fernández Löbbe)

* SOLR-16952: In distributed i.e. multi-shard cloud mode returned dense vector 'fl' fields are now a list of numbers instead of strings. (Qais Qadri, Christine Poerschke)

* SOLR-17090: The v2 "delete alias" API no longer errantly returns a 405 status code (Jason Gerlowski)

* SOLR-17057: JSON Query regression: If "query" is specified with a String (not JSON structure),
  "defType" should parse it.  Since 9.4 defType was ignored.  (David Smiley)

Dependency Upgrades
---------------------
* SOLR-17012: Update Apache Hadoop to 3.3.6 and Apache Curator to 5.5.0 (Kevin Risden)
